objects/vlocity_ins__SICCode__c.object
<CustomObject>
    <description>The Standard Industrial Classification (SIC) is a system for classifying industries by a four-digit code that categorize companies by the type of business activities they engage in.</description>
    <fields>
        <fullName>vlocity_ins__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Cleaners</fullName>
                </value>
                <value>
                    <fullName>Food Stores</fullName>
                </value>
                <value>
                    <fullName>Hardware-Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Printers-Copiers</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>0100-0999	Agriculture, Forestry and Fishing</fullName>
                    <isActive>false</isActive>
                    <label>0100-0999	Agriculture, Forestry and Fishing</label>
                </value>
                <value>
                    <fullName>1000-1499	Mining</fullName>
                    <isActive>false</isActive>
                    <label>1000-1499	Mining</label>
                </value>
                <value>
                    <fullName>1500-1799	Construction</fullName>
                    <isActive>false</isActive>
                    <label>1500-1799	Construction</label>
                </value>
                <value>
                    <fullName>1800-1999	not used</fullName>
                    <isActive>false</isActive>
                    <label>1800-1999	not used</label>
                </value>
                <value>
                    <fullName>2000-3999	Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>2000-3999	Manufacturing</label>
                </value>
                <value>
                    <fullName>4000-4999	Transportation, Communications, Electric, Gas and Sanitary service</fullName>
                    <isActive>false</isActive>
                    <label>4000-4999	Transportation, Communications, Electric, Gas and Sanitary service</label>
                </value>
                <value>
                    <fullName>5000-5199	Wholesale Trade</fullName>
                    <isActive>false</isActive>
                    <label>5000-5199	Wholesale Trade</label>
                </value>
                <value>
                    <fullName>5200-5999	Retail Trade</fullName>
                    <isActive>false</isActive>
                    <label>5200-5999	Retail Trade</label>
                </value>
                <value>
                    <fullName>6000-6799	Finance, Insurance and Real Estate</fullName>
                    <isActive>false</isActive>
                    <label>6000-6799	Finance, Insurance and Real Estate</label>
                </value>
                <value>
                    <fullName>7000-8999	Services</fullName>
                    <isActive>false</isActive>
                    <label>7000-8999	Services</label>
                </value>
                <value>
                    <fullName>9100-9729	Public Administration</fullName>
                    <isActive>false</isActive>
                    <label>9100-9729	Public Administration</label>
                </value>
                <value>
                    <fullName>9900-9999	Nonclassifiable</fullName>
                    <isActive>false</isActive>
                    <label>9900-9999	Nonclassifiable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SIC Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__DisplayName__c</columns>
        <columns>vlocity_ins__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SIC Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>